<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:padding="10dip">
    
    <TextView 
        android:id="@+id/job_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_type_label"
        android:textSize="20dip"
        />
    
    <EditText 
        android:id="@+id/edit_job_type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    
    <TextView 
        android:id="@+id/job_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_time_label"
        android:textSize="20dip"
        />
    
    <SeekBar 
        android:id="@+id/job_time_seekbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:progress="1"
        android:max="9"
        />
    
    <TextView 
        android:id="@+id/job_time_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_original"
        android:textSize="20dip"
        android:gravity="center_horizontal"
        />
    

</LinearLayout>